Fixed a small issue where the date was appearing on two lines on smaller resolution screens.

--- a/css.css
+++ b/css.css
@@ -658,6 +658,10 @@ table tr td h4 {
     font-weight: 500
 }
 
+table tr .dateData {
+    width: 120px
+}
+
 table tr td h5 {
     font-size: 13px
 }
